# UniversityCourses

./: README.md
AndroidEnglishLearner/AndroidEnglishLearning/: .project
AsmCourse/: task1.asm
AsmCourse/DCT_on_SSE/: DCT.asm  DCTexpandedloops.asm  IDCT.asm  (+5 more)
BooleanSearchEngine/: .gitignore
DBMS/: init_db.sql  queries.sql  runpsql.bat
DynamicOrthogonalRangeQuery/: README.md
EvolutionComputations/: Eil76.ans  commons.py  lab1.py  lab2.py  lab3.py  lab4.py
HeatEquation/: abstract_scheme.py  explicit_downstream.py  explicit_upstream.py  implicit_downstream.py  implicit_upstream.py  leapfrog.py  main.py
Information-Theory/: .gitignore  com.warrior.informationtheory-1.apk
LL1ParserGenerator/: LexerRules.g4  ParseGen.g4  ParserGen.g4
LinearSystemSolver/: .gitignore  README.md  conjugate_gradient  gauss  input  main.rb  relaxation
Lorenz/: README.md  adams  explicit_euler  implicit_euler  input  makefile  plot.py  runge_kutta  solver  solver.cpp  stat
MATLAB/: F.m  ViterbiAWGN.m  ViterbiBSC.m  pseudoF.m
MovieRecommenderSystem/: main.py  submission0
Scala/: README.md
TopDownRegexpParser/: .gitignore  README.md  Report.odt
cg/: .gitignore  CMakeLists.txt  README  geom-visualization.pro
cg/CMake/Modules/: FindGMP.cmake
cg/examples/: CMakeLists.txt
cg/examples/convex/: CMakeLists.txt  ccw_contour_convex.cpp
cg/examples/convex_hull/: CMakeLists.txt  convex_hull.cpp  dynamic_convex_hull.cpp
cg/examples/operations/: CMakeLists.txt  ccw_convex_contains_point.cpp  contour_contains_point.cpp  diametr_of_set.cpp  diametr_set.cpp  douglas_peucker.cpp  rectangle_intersects_segment.cpp  segments_intersect.cpp  triangle_contains_point.cpp  triangle_intersects_segment.cpp
cg/examples/orientation/: CMakeLists.txt  orientation_contour_ccw.cpp
cg/examples/viewer/: CMakeLists.txt  viewer.cpp
cg/include/: CMakeLists.txt
cg/include/cg/common/: common.h  range.h
cg/include/cg/convex_hull/: andrew.h  dynamic_hull.h  graham.h  jarvis.h  naive_dynamic.h  quick_hull.h
cg/include/cg/io/: io_utils.h  point.h  range.h  rectangle.h  segment.h  triangle.h  vector.h
cg/include/cg/operations/: convex.h  diametr_of_set.h  distance.h  douglas-peucker.h  my_operation.h  orientation.h  point_in_contour.h  point_in_convex_contour.h  point_in_triangle.h  polygon_orientation.h  segment_intersect.h  segment_intersect_rectangle.h  segment_intersect_triangle.h
cg/include/cg/operations/contains/: contour_point.h  segment_point.h  triangle_point.h
cg/include/cg/operations/has_intersection/: rectangle_segment.h  segment_segment.h  triangle_segment.h
cg/include/cg/primitives/: contour.h  point.h  range.h  rectangle.h  segment.h  triangle.h  vector.h
cg/include/cg/visualization/: draw_util.h  viewer.h  viewer_adapter.h
cg/include/misc/: random_utils.h  utils.h
cg/src/: CMakeLists.txt  stdafx.h
cg/src/visualization/: draw_util.cpp  drawer_impl.cpp  drawer_impl.h  main_window.cpp  main_window.h  printer_impl.cpp  printer_impl.h  visualization.cpp
cg/tests/: CMakeCache.txt  CMakeLists.txt  contains.cpp  convex.cpp  convex_hull.cpp  diametr_of_set.cpp  douglas_peucker.cpp  dynamic_convex_hull.cpp  dynamic_hull.cpp  gmon.out  has_intersection.cpp  my_operation.cpp  orientation.cpp  point_in_contour.cpp  point_in_convex_contour.cpp  point_in_triangle.cpp  polygon_orientation.cpp  random_utils.h  segment_intersect.cpp  segment_intersect_rectangle.cpp  segment_intersect_triangle.cpp
os/: README.markdown
(+186 files in other folders)
