cmake_minimum_required(VERSION 2.6 FATAL_ERROR)

project(cg-library)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake/Modules)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread -Wall")

find_package(OpenGL REQUIRED)
find_package(GMP REQUIRED)

find_package(Qt4 COMPONENTS QtOpenGL QtCore QtGui REQUIRED)
include(${QT_USE_FILE})

find_package(Boost REQUIRED)

include_directories(include ${Boost_INCLUDE_DIR} ${GMP_INCLUDE_DIR})

add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(examples)
